Lagom/Fuzzers: Add fuzzers for Windows-1251 and Windows-1255 decoders

--- a/Meta/Lagom/Fuzzers/CMakeLists.txt
+++ b/Meta/Lagom/Fuzzers/CMakeLists.txt
@@ -16,6 +16,7 @@ function(add_simple_fuzzer name)
 endfunction()
 
 add_simple_fuzzer(FuzzBMPLoader)
+add_simple_fuzzer(FuzzCyrillicDecoder)
 add_simple_fuzzer(FuzzDeflateCompression)
 add_simple_fuzzer(FuzzDeflateDecompression)
 add_simple_fuzzer(FuzzELF)
@@ -29,6 +30,7 @@ add_simple_fuzzer(FuzzPNGLoader)
 add_simple_fuzzer(FuzzPBMLoader)
 add_simple_fuzzer(FuzzPGMLoader)
 add_simple_fuzzer(FuzzPPMLoader)
+add_simple_fuzzer(FuzzHebrewDecoder)
 add_simple_fuzzer(FuzzHttpRequest)
 add_simple_fuzzer(FuzzJs)
 add_simple_fuzzer(FuzzLatin1Decoder)
