--- a/Userland/Tests/LibC/CMakeLists.txt
+++ b/Userland/Tests/LibC/CMakeLists.txt
@@ -4,6 +4,7 @@ set(TEST_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/TestLibCTime.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/TestLibCMkTemp.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/TestLibCExec.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/TestLibCDirEnt.cpp
 )
 
 file(GLOB CMD_SOURCES  CONFIGURE_DEPENDS "*.cpp")
