Meta: Add a post-commit commit message linter hook
This should help with getting commit messages tidy before they pass
through CI's commit linter :^)

For this hook to work pre-commit has to be explicitly installed via:
`pre-commit install --hook-type commit-msg`

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
         name: Running Meta/lint-ci.sh to ensure changes will pass linting on CI
         entry: bash Meta/lint-ci.sh
         args: [ --no-ports ]
+        stages: [ commit ]
         language: system
 
       - id: meta-lint-ports
@@ -12,4 +13,11 @@ repos:
         entry: Meta/lint-ports.py
         pass_filenames: false
         files: ^Ports/
+        stages: [ commit ]
+        language: system
+
+      - id: meta-lint-commit
+        name: Lint commit message to ensure it will pass the commit linting on CI
+        entry: Meta/lint-commit.sh
+        stages: [ commit-msg ]
         language: system
