--- a/Userland/Libraries/LibGL/CMakeLists.txt
+++ b/Userland/Libraries/LibGL/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(SOURCES
+    Tex/NameAllocator.cpp
     Clipper.cpp
     GLBlend.cpp
     GLColor.cpp
@@ -6,6 +7,7 @@ set(SOURCES
     GLLights.cpp
     GLLists.cpp
     GLMat.cpp
+    GLTexture.cpp
     GLUtils.cpp
     GLVert.cpp
     SoftwareGLContext.cpp
