LibWasm+LibWeb: Partially resolve memory exports
This allows the JS side to access the wasm memory, assuming it's
exported by the module.
This can be used to draw stuff on the wasm side and display them from
the js side, for example :^)

--- a/Userland/Libraries/LibWeb/CMakeLists.txt
+++ b/Userland/Libraries/LibWeb/CMakeLists.txt
@@ -222,6 +222,7 @@ set(SOURCES
     UIEvents/MouseEvent.cpp
     URLEncoder.cpp
     WebAssembly/WebAssemblyObject.cpp
+    WebAssembly/WebAssemblyObjectPrototype.cpp
     WebContentClient.cpp
     XHR/EventNames.cpp
     XHR/XMLHttpRequest.cpp
